# kalvi-library-template

./: .cursorignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  AGENTIC-WORKFLOW.md  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TEMPLATE.md  mkdocs.yml  noxfile.py  pyproject.toml
.claude/skills/docs/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/triage/: SKILL.md
.codex/: config.json  config.toml
.codex/skills/commit/: SKILL.md
.codex/skills/plan/: SKILL.md
.codex/skills/review/: SKILL.md
.codex/skills/test/: SKILL.md
.cursor/: README.md  hooks.json  mcp.json
.cursor/commands/: code-review.md  run-quality-checks.md
.cursor/rules/: always.mdc  implementation.mdc  issues.mdc  markdown.mdc  python.mdc
.cursor/skills/bootstrap-from-template/: SKILL.md
.cursor/skills/debug/: SKILL.md
.cursor/skills/dependency-update/: SKILL.md
.cursor/skills/implement-from-issue/: SKILL.md
.cursor/skills/maintain/: SKILL.md
.cursor/skills/project-review/: SKILL.md
.cursor/skills/release/: SKILL.md
.cursor/skills/research/: SKILL.md
.cursor/skills/run-quality-checks/: SKILL.md
.cursor/skills/triage/: SKILL.md
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SUGGESTED_ISSUES.md
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: ci.yml
.ruler/: AGENTS.md  ruler.toml
.ruler/skills/implement-from-issue/: SKILL.md
.ruler/skills/refactor/: SKILL.md
.ruler/skills/research/: SKILL.md
.ruler/skills/run-quality-checks/: SKILL.md
.zed/: settings.json
docs/: LINTERS-FORMATTERS.md  PROJECT-GROUNDING-RESEARCH.md  SKILLS-RESEARCH.md  agentic-workflow.md  bootstrap-from-template.md  cursor-setup.md  index.md  principles.md  project-review-rubric.md  settings-pattern.md  setup-mcp.md  testing.md
docs/api/: kalvi_library_template.md
docs/decisions/: 0000-use-madr-and-decisions-folder.md  0001-logging-in-libraries.md  README.md
docs/research/: README.md  agentic-workflow-research.md  generic-agent-rules-cursor-zed.md  linters-formatters.md  project-grounding-research.md  ruler-multi-agent-strategy.md  skills-research.md
docs/specs/: README.md
examples/: hello.py  structlog_example.py
scripts/: check-doc-filenames.py  cursor-after-file-edit.py  ruler-pre-commit.sh
src/kalvi_library_template/: __init__.py
tests/: __init__.py  conftest.py  test_example.py  test_optional_config.py  test_optional_logging.py
