[project]
name = "kalvi-library-template"
version = "0.1.0"
description = "Python library template with uv, Ruff, pytest, and Cursor agent setup."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["template", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
config = [
    "pydantic>=2",
    "pydantic-settings>=2",
]
logging = [
    "structlog>=24",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=6",
    "coverage[toml]>=7",
    "ruff>=0.4",
    "pylint>=3.0",
    "mypy>=1.0",
    "typeguard>=4",
    "hypothesis>=6",
    "bandit>=1.7",
    "pip-audit>=2",
    "pre-commit>=3.0",
    "commitizen>=3.0",
    "build>=1.0",
    "twine>=5.0",
    "nox>=2024",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.26",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalvi_library_template"]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=6",
    "coverage[toml]>=7",
    "ruff>=0.4",
    "pylint>=3.0",
    "mypy>=1.0",
    "typeguard>=4",
    "hypothesis>=6",
    "bandit>=1.7",
    "pip-audit>=2",
    "pre-commit>=3.0",
    "commitizen>=3.0",
    "build>=1.0",
    "twine>=5.0",
    "nox>=2024",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.26",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "N", "ANN"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["kalvi_library_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.pylint.main]
jobs = 0
ignore-patterns = ["\\.venv", "venv", "build", "dist"]
recursive = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "R0913"]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = ["pyproject.toml:version", "src/kalvi_library_template/__init__.py:__version__"]

[tool.coverage.run]
branch = true
source = ["src/kalvi_library_template", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80
